--- a/sallystudent.html
+++ b/sallystudent.html
@@ -13,11 +13,11 @@
 			<img src="https://images.ecosia.org/ob9vJkn1GN53jwDQK8n5xJC3jZ8=/0x390/smart/https%3A%2F%2Fwww.gannett-cdn.com%2F-mm-%2Fd53b43521b0bc6f8786c45e873f3bff599f91e7e%2Fc%3D0-82-4538-2632%26r%3Dx1683%26c%3D3200x1680%2Flocal%2F-%2Fmedia%2FUSATODAY%2FUSATODAY%2F2014%2F09%2F12%2F1410548743000-3_1_GENERIC_CLASSROOM_FOR_BTFLY_4-20_63626000.JPG" alt="A picture of Sally Student being studious in class." style='height:20%; width:20%; object-fit: contain'>
 			<h2>Contact Me</h2>
 			<address>
-				<a href="mailto:sallystudent@university.edu">sallystudent@university.edu</a>
+				<a href="mailto:sallystudent@university.edu"?subject="You're%20Hired!" target="_blank">sallystudent@university.edu</a>
 				<b> | </b>
-				<a href="tel:+123-456-7890">(123)-456-7890</a>
+				<a href="tel:+123-456-7890" target="_blank">(123)-456-7890</a>
 				<b> | </b>
-				<a href="https://linkedin.com">/in/sally-student</a></br>
+				<a href="https://linkedin.com" target="_blank">/in/sally-student</a></br>
 			</address>
 		</header>
 		<section>
